--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "vitest",
+    "coverage": "vitest run --coverage"
   },
   "dependencies": {
     "@tanstack/react-query": "5.51.1",
@@ -16,15 +18,28 @@
     "sass": "1.77.7"
   },
   "devDependencies": {
-    "@types/react": "18.3.3",
-    "@types/react-dom": "18.3.0",
+    "@testing-library/dom": "^10.3.1",
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^16.0.0",
+    "@testing-library/user-event": "^14.5.2",
+    "@types/jest": "^29.5.12",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "@types/testing-library__jest-dom": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "7.13.1",
     "@typescript-eslint/parser": "7.13.1",
+    "@vitejs/plugin-react": "^4.3.1",
     "@vitejs/plugin-react-swc": "3.5.0",
+    "@vitest/coverage-v8": "^2.0.2",
+    "@vitest/ui": "^2.0.2",
     "eslint": "8.57.0",
     "eslint-plugin-react-hooks": "4.6.2",
     "eslint-plugin-react-refresh": "0.4.7",
+    "jest": "^29.7.0",
+    "jsdom": "^24.1.0",
+    "ts-node": "^10.9.2",
     "typescript": "5.2.2",
-    "vite": "5.3.1"
+    "vite": "^5.3.1",
+    "vitest": "^2.0.2"
   }
 }
