--- a/package.json
+++ b/package.json
@@ -36,9 +36,15 @@
     "eslint-plugin-react-refresh": "0.4.7",
     "jest": "^29.7.0",
     "jsdom": "^24.1.0",
+    "msw": "^2.4.5",
     "ts-node": "^10.9.2",
     "typescript": "5.2.2",
     "vite": "^5.3.1",
     "vitest": "^2.0.2"
+  },
+  "msw": {
+    "workerDirectory": [
+      "public"
+    ]
   }
 }
